Resources/simpsons-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: simpsons-ns
  labels:
    name: simpsons-ns
