Resources/mysql-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: simpsons-ns
spec:
  replicas: 1
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:8.0.29
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: script
          configMap:
             name: mysql-init-script-configmap
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
