Resources/simpsons-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpsons-api
  namespace: simpsons-ns
  labels:
    app: simpsons-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simpsons-api
  template:
    metadata:
      labels:
        app: simpsons-api
    spec:
      containers:
      - name: simpsons-api
        image: andresciccarelli/simpsons-quotes:0.1.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        # readinessProbe:
        #   tcpSocket:
        #     port: 8000
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /quotes
        #     port: 8000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        # startupProbe:
        #   httpGet:
        #     path: /quotes
        #     port: 8000
        #   failureThreshold: 5
        #   periodSeconds: 10
