Resources/simpsons-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpsons-api-service
  namespace: simpsons-ns
spec:
  selector:
    app: simpsons-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
