Resources/simpsons-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpsons-api-ingress
  namespace: simpsons-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: simpsons.192-168-49-2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simpsons-api-service
            port:
              number: 8000
